// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expense list render 1`] = `
<div
  className="content_container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpensesListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpensesListItem
      amount={109500}
      createdAt={-345600000}
      description="Debit card"
      id="2"
      key="2"
      note=""
    />
    <ExpensesListItem
      amount={4500}
      createdAt={345600000}
      description="Rent"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should expense list render 2 1`] = `
<div
  className="content_container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
